<resources>
    <string name="app_name">Sokoni</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_market">Market</string>
    <string name="nav_categories">Categories</string>
    <string name="nav_news">News</string>
    <string name="nav_account">Account</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Market</item>
        <item>Categories</item>
        <item>News</item>
        <item>Account</item>
        <item>Settings</item>
    </string-array>

    <string-array name="account_list_menu">
        <item>Change username</item>
        <item>Profile photo</item>
        <item>My ads</item>
        <item>Delete my account</item>
    </string-array>

    <string-array name="settings_list_menu">
        <item>Change language</item>
        <item>App theme</item>
        <item>Notifications</item>
        <item>Version</item>
    </string-array>

    <string-array name="ad_categories">
        <item>Food Crops</item>
        <item>Cash Crops</item>
        <item>Equipments</item>
        <item>Livestock</item>
        <item>Real Estate</item>
    </string-array>


    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_world">Yohana Tubike</string>

    <string name="title_activity_login">Login</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="ad_category">Choose Category</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="hint_ad_title">Title</string>
    <string name="hint_ad_image">Image</string>
    <string name="ad_Title">Title</string>
    <string name="ad_Price">Price</string>
    <string name="ad_Description">Description</string>
    <string name="ad_User_name">Name</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="ad_Contact">Contact</string>
    <string name="ad_category_prompt">Choose Category</string>
    <string name="hint_price">Price</string>
    <string name="hint_contact">Contact</string>
    <string name="hint_location">Location</string>
    <string name="hint_region">Region</string>
    <string name="hint_image">Upload image &#8230;</string>
    <string name="hint_description">Description</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_post_ad">Submit</string>
    <string name="hint_ad_name">Title</string>
</resources>
