<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_shopping_cart_black_24dp"
            android:title="@string/nav_market" />
        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/ic_list_black_24dp"
            android:title="@string/nav_categories" />
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_news" />

        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/nav_account" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_settings" />
    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:title="@string/nav_about_us" />
            <item
                android:id="@+id/nav_privacy_policy"
                android:title="@string/privacy_policy" />
        </menu>
    </item>

</menu>