<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingTop="100dp"
    tools:context="com.farmersmarket.john.sokoni.activities.PostAdActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <EditText
            android:id="@+id/ad_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:hint="@string/hint_ad_name"
            android:padding="10dp"
            android:maxLines="1"
            android:inputType="textCapWords"
            android:textColor="@color/input_register"
            android:textColorHint="@color/input_register_hint" />

        <EditText
            android:id="@+id/ad_price"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:hint="@string/hint_price"
            android:inputType="numberDecimal"
            android:padding="10dp"
            android:maxLines="1"
            android:textColor="@color/input_register"
            android:textColorHint="@color/input_register_hint" />

        <Spinner
            android:id="@+id/ad_category"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:entries="@array/ad_categories"
            android:prompt="@string/ad_category_prompt" />

        <EditText
            android:id="@+id/ad_contact"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:hint="@string/hint_contact"
            android:inputType="phone"
            android:padding="10dp"
            android:maxLines="1"
            android:textColor="@color/input_register"
            android:textColorHint="@color/input_register_hint" />

        <EditText
            android:id="@+id/ad_location"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:hint="@string/hint_location"
            android:inputType="textAutoComplete"
            android:padding="10dp"
            android:maxLines="1"
            android:textColor="@color/input_register"
            android:textColorHint="@color/input_register_hint" />


        <EditText
            android:id="@+id/ad_region"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:hint="@string/hint_region"
            android:inputType="textAutoComplete"
            android:padding="10dp"
            android:maxLines="1"
            android:textColor="@color/input_register"
            android:textColorHint="@color/input_register_hint" />


        <EditText
            android:id="@+id/ad_image"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:hint="@string/hint_image"
            android:inputType=""
            android:padding="10dp"
            android:maxLines="1"
            android:textColor="@color/input_register"
            android:textColorHint="@color/input_register_hint" />


        <EditText
            android:id="@+id/ad_description"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:hint="@string/hint_description"
            android:inputType="textMultiLine"
            android:padding="10dp"
            android:maxLines="1"
            android:textColor="@color/input_register"
            android:textColorHint="@color/input_register_hint" />

        <!-- Login Button -->

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:stretchColumns="*">

            <TableRow >
                <Button
                    android:layout_width="fill_parent"
                    android:id="@+id/btnPostAd"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:layout_margin="5dip"
                    android:text="Post ad" />
                <Button
                    android:layout_width="fill_parent"
                    android:id="@+id/btnCancel"
                    android:background="@color/white"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dip"
                    android:text="Cancel" />
            </TableRow>
        </TableLayout>

    </LinearLayout>
</LinearLayout>
